MEC Production/MEC Production/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Conga_Item_Model__c</fullName>
        <formula>PricebookEntry.Product2.Article__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Item Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Item_Status__c</fullName>
        <description>Used in Conga Composer ( SYSTEM)</description>
        <formula>TEXT(PricebookEntry.Product2.Item_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga_Item_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Product_Category__c</fullName>
        <formula>PricebookEntry.Product2.Product_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Product_sub_Category__c</fullName>
        <formula>PricebookEntry.Product2.Merchandise_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Product sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Margin_Category__c</fullName>
        <label>Front Margin Category</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Qty__c</fullName>
        <label>PO Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Mapping_code__c</fullName>
        <label>Product Mapping code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFPO_Qty__c</fullName>
        <label>RFPO Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_RFPO__c</fullName>
        <label>Recommended RFPO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Out_Stock_on_Hand__c</fullName>
        <label>Store Stock on Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Sell_Out__c</fullName>
        <label>Weighted Sell Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>